Bug 707659 - Sometime gsc reports RC=0 although errors occurred
Summary: Sometime gsc reports RC=0 although errors occurred
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: General (show other bugs)
Version: 10.03.0
Hardware: PC Windows 11
: P2 normal
Assignee: Default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-14 12:19 UTC by Adrian Devries
Modified: 2024-05-22 07:05 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
PDF files generated from "examples/*.ps" along with log files from gsc and qpdf (4.16 MB, application/zip)
2024-03-14 12:19 UTC, Adrian Devries
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adrian Devries 2024-03-14 12:19:41 UTC
Created attachment 25465 [details]
PDF files generated from "examples/*.ps" along with log files from gsc and qpdf

According to the following log files (cf. attached ZIP file), sometimes gsc reports RC=0 although errors occurred:

gs10030w32\grayalph-gs.log.bak
gs10030w32\spots-gs.log.bak
gs10030w64\doretree-gs.log.bak
gs10030w64\grayalph-gs.log.bak
gs10030w64\spots-gs.log.bak
gs10030w64\vasarely-gs.log.bak

So, gsc does not set the return code (or error level) correctly.

Cf. case https://bugs.ghostscript.com/show_bug.cgi?id=707653.
Comment 1 Ken Sharp 2024-03-14 15:54:09 UTC
Fixed in commit 2472a03535634164f902acb49517e46e1b6766e7

Thanks for making a separate report for this.
Comment 2 Adrian Devries 2024-05-22 06:24:40 UTC
Please, note that the issue has NOT been solved in Ghostscript 10.03.1. I am going to open a new case.
Comment 3 Ken Sharp 2024-05-22 07:05:12 UTC
(In reply to Adrian Devries from comment #2)
> Please, note that the issue has NOT been solved in Ghostscript 10.03.1. I am
> going to open a new case.

10.03.1 is a *security* release only, hence the change in patch level, not major or minor version.

10.03.1 only contains commits necessary to address security issues, this is not a security issue and so is not included.