Don't discard exit codes when closing the interpreter

Bug #707659 "Sometime gsc reports RC=0 although errors occurred"

Not sure why this was done, but return codes from closing down the
interpreter were discarded, leading to an unexpected exit code.